# RocketWebApp

./: Cargo.toml  readme.md
src/: main.rs
templates/errors/: 404.html.tera
templates/includes/: about.html.tera  home.html.tera
templates/layouts/: base.html.tera
