[package]
name = "RocketWebApp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.11"
rocket_contrib = { version = "0.4.11", default-features = false, features = ["tera_templates"] }
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
